2017-05-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/term.c (do_arc):  Remove hack for the windows terminal which was
	meant to fix the drawing of circles, but broke it.  Note that there are
	similar cases in the code (ellipses) where a hack like this is actually
	necessary.  Further investigations required.
	Bug #1880

2017-05-13  Bastian Maerkisch  <bmaerkisch@web.de>

	Backport changes from 5.1:

	* src/win/wgdiplus.cpp:
	Graphics::MeasureString did not take trailing spaces into account.
	Off-by-one error in mapping of graph coordinates.
	Fix memory leak in SetFont_gdiplus.

	* src/win/wgraph.c:
	(drawgraph) Off-by-one error in mapping of graph coordinates.
	(CopyClip) Only attempt to set clipboard data if the bitmap/metafile
	handle is valid.  Emit an error message otherwise.
	(SaveAsEMF) Tweak flags for GetSaveFileName() to make sure that the
	file/path is not read-only and to preserve the current working
	directory.
	(WndGraphProc): Remove dead code in mouse handling: Single and double
	clicks are handled by the code in mouse.c and the window is not even
	configured to receive double click events.  Also make sure that mouse
	wheel "button"s are released again.

	* src/win/wcommon.h src/win/wgnuplib.h src/win/wgraph.c
	src/win/wgdiplus.cpp:  GDI+ implementation of enhanced text.
	Until now the GDI+ backend still used the GDI code to draw enhanced
	text, which caused differences in layout if text was rendered as
	"normal" or enhanced text.  We now re-use the previous GDI-only
	routines and introduce function pointers to call GDI or GDI+ code
	depending on if they are called from drawgraph() or
	drawgraph_gdiplus().

	* src/win/wgraph.c src/win/wcommon.h (draw_image):  Make static.

2017-05-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm:
	In order to scale up an existing plot uniformly, e.g. for printing
	a poster-size PostScript or PDF file, it is convenient to be able to